<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pikasso demo</string>

    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="load">Load</string>

    <string name="no_image">No image</string>
    <string name="loading">Loading…</string>
    <string name="success">Success</string>
    <string name="error">Error</string>

    <string name="vibrant">Vibrant</string>
    <string name="light_vibrant">Light vibrant</string>
    <string name="dark_vibrant">Dark vibrant</string>
    <string name="muted">Muted</string>
    <string name="light_muted">Light muted</string>
    <string name="dark_muted">Dark muted</string>
    <string name="dominant">Dominant</string>

    <string name="input_url">Input URL</string>
    <string name="transformations">Transformations</string>
    <string name="crop_circle">Crop circle</string>
    <string name="crop_rounded">Crop rounded</string>
    <string name="crop_square">Crop square</string>
    <string name="grayscale">Grayscale</string>
    <string name="mask">Mask</string>
    <string name="overlay">Overlay</string>
</resources>