<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory android:title="@string/input_url">

        <androidx.preference.EditTextPreference
            android:key="input_url"
            android:title="@string/input_url" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/transformations">

        <androidx.preference.CheckBoxPreference
            android:key="crop_circle"
            android:title="@string/crop_circle" />

        <androidx.preference.CheckBoxPreference
            android:key="crop_rounded"
            android:title="@string/crop_rounded" />

        <androidx.preference.CheckBoxPreference
            android:key="crop_square"
            android:title="@string/crop_square" />

        <androidx.preference.CheckBoxPreference
            android:key="grayscale"
            android:title="@string/grayscale" />

        <androidx.preference.CheckBoxPreference
            android:key="mask"
            android:title="@string/mask" />

        <androidx.preference.CheckBoxPreference
            android:key="overlay"
            android:title="@string/overlay" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>